--- a/src/data/people.yml
+++ b/src/data/people.yml
@@ -1,8 +1,8 @@
 me:
   name: George Kaye
-  address: Office 218 (Desk H), School of Computer Science, University of Birmingham
+  address: Office 218 (Desk G), School of Computer Science, University of Birmingham
   email:
-    uni: g.j.kaye at cs.bham.ac.uk
+    uni: g.j.kaye at pgr.bham.ac.uk
     personal: george at georgejkaye.com
   picture: /images/me/me-3.webp
 noam:
@@ -17,7 +17,7 @@ miriam:
   name: Miriam Backens
   poss: "'"
   web: https://www.cs.bham.ac.uk/~backensm/
-claudio: 
+claudio:
   name: Claudio Belo Lourenco
   poss: "'s"
   web: https://www.lri.fr/~blourenc/
