--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "build:sass": "npx sass sass:build/css"
   },
   "dependencies": {
-    "@11ty/eleventy": "^1.0.0",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
+    "@11ty/eleventy": "^1.0.2",
     "@iktakahiro/markdown-it-katex": "^4.0.1",
     "js-yaml": "^4.1.0",
     "lodash.chunk": "^4.2.0",
@@ -22,6 +21,9 @@
     "moment": "^2.29.4",
     "outdent": "^0.8.0",
     "sass": "^1.43.4"
+  },
+  "devDependencies": {
+    "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.4"
   },
   "license": "GPL-3.0-or-later"
 }
