[data] Update links section

--- a/src/data/links.yml
+++ b/src/data/links.yml
@@ -4,6 +4,7 @@ theory: https://www.birmingham.ac.uk/research/activity/computer-science/theory-o
 # social
 twitter: https://twitter.com/thegeorgejkaye
 instagram: https://instagram.com/georgejkaye
+orcid: https://orcid.org/0000-0002-0515-4055
 
 # misc
 cv: /files/cv.pdf
