--- a/src/data/people.yml
+++ b/src/data/people.yml
@@ -1,6 +1,6 @@
 me:
   name: George Kaye
-  address: Office 218 (Desk G), School of Computer Science, University of Birmingham
+  address: Office 218, School of Computer Science, University Road W, B15 2TT
   email:
     uni: g.j.kaye at pgr.bham.ac.uk
     personal: george at georgejkaye.com
