[fix] Fix typo in talks page

--- a/src/data/talks.yml
+++ b/src/data/talks.yml
@@ -1,4 +1,4 @@
-- title: A compositisonal theory of digital circuits
+- title: A compositional theory of digital circuits
   venue: Midlands Graduate School 2023
   web: https://www.cs.bham.ac.uk/~mhe/events/MGS23/
   date: 2023-04-05
