--- a/.github/workflows/eleventy.yml
+++ b/.github/workflows/eleventy.yml
@@ -1,10 +1,8 @@
 name: Eleventy build
-
 on:
   push:
     branches: [ develop ]
-
-jobs:  
+jobs:
   build:
     runs-on: ubuntu-latest
     steps:
@@ -21,8 +19,9 @@ jobs:
       - name: Compile sass
         run: yarn build:sass
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v1.1.0
+        uses: s0/git-publish-subdir-action@develop
         env:
-          PUBLISH_DIR: build 
-          PUBLISH_BRANCH: main
+          REPO: self
+          BRANCH: main
+          FOLDER: build
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
