[data] Add fscd line about traced comonoid paper

--- a/src/data/papers.yml
+++ b/src/data/papers.yml
@@ -1,5 +1,5 @@
 - title: Rewriting modulo traced comonoid structure
-  details: Arxiv preprint
+  details: Arxiv preprint, to appear in FSCD 2023
   authors:
     - name: dan
     - name: me
