[data] Add syco 11 visit

--- a/src/data/visits.yml
+++ b/src/data/visits.yml
@@ -1,3 +1,7 @@
+- venue: SYCO 11
+  web: https://www.cl.cam.ac.uk/events/syco/11/
+  city: Paris
+  dates: April 20-21, 2023
 - venue: Huawei string diagrams workshop
   web: https://blogs.ed.ac.uk/he-lab/2023/01/20/bayesday-workshop-on-diagrammatic-methods-to-formalise-and-reason-about-programming-languages-and-their-implementation/
   city: Edinburgh
