--- a/src/data/visits.yml
+++ b/src/data/visits.yml
@@ -1,7 +1,15 @@
+- venue: Second Meeting of the Southern Logic Seminar
+  web: http://zanasi.com/fabio/SLS/SLS-ucl.html
+  city: London
+  dates: May 16, 2023
 - venue: SYCO 11
   web: https://www.cl.cam.ac.uk/events/syco/11/
   city: Paris
   dates: April 20-21, 2023
+- venue: First Meeting of the Southern Logic Seminar
+  web: https://t-powell.github.io/southern_logic_seminar/sls_bath.html
+  city: Bath
+  dates: February 23, 2023
 - venue: Huawei string diagrams workshop
   web: https://blogs.ed.ac.uk/he-lab/2023/01/20/bayesday-workshop-on-diagrammatic-methods-to-formalise-and-reason-about-programming-languages-and-their-implementation/
   city: Edinburgh
