[data] Add syco 11 picture

--- a/src/data/pictures.yml
+++ b/src/data/pictures.yml
@@ -1,4 +1,7 @@
-- caption: The conference photo for SYCO 10, taking in the Informatics Building.
+- caption: The conference photo for SYCO 11, taken in the Turing Building at Ecole Polytechnique.
+  alt: The attendents of SYCO 11 stand in the atrium of a modern building, with leafy plants in the background.
+  src: me/syco11.webp
+- caption: The conference photo for SYCO 10, taken in the Informatics Building.
   alt: The attendants of SYCO 10 stand in the atrium of a modern building, with a Christmas tree to the right of the frame.
   src: me/syco10.webp
 - caption: The conference photo for ACT 2022, taken outside the McCance building.
