--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:sass": "npx sass sass:build/css"
   },
   "dependencies": {
-    "@11ty/eleventy": "^1.0.2",
+    "@11ty/eleventy": "2",
     "@iktakahiro/markdown-it-katex": "^4.0.1",
     "js-yaml": "^4.1.0",
     "lodash.chunk": "^4.2.0",
