--- a/src/data/visits.yml
+++ b/src/data/visits.yml
@@ -1,3 +1,11 @@
+- venue: SYNCHRON 2023
+  web: https://www.rtsys.informatik.uni-kiel.de/en/synchron-2023
+  city: Kiel
+  dates: November 27-December 01, 2023
+- venue: FSCD 2023
+  web: https://easyconferences.eu/fscd2023/
+  city: Rome
+  dates: July 03-06, 2023
 - venue: Second Meeting of the Southern Logic Seminar
   web: http://zanasi.com/fabio/SLS/SLS-ucl.html
   city: London
