[data] Add new teaching for this term

--- a/src/data/teaching.yml
+++ b/src/data/teaching.yml
@@ -1,4 +1,9 @@
 - title: Theories of Computation
+  web: https://www.cs.bham.ac.uk/internal/modules/2023/06-35393/
+  term: Spring 2024
+  role: Teaching assistant
+  institution: University of Birmingham
+- title: Theories of Computation
   web: https://www.cs.bham.ac.uk/internal/modules/2021/06-35393/
   term: Spring 2022
   role: Teaching assistant
