[fix] Redirect stations to A page

--- a/src/data/redirects.yml
+++ b/src/data/redirects.yml
@@ -20,6 +20,8 @@
   to: "/lamviz/gallery/"
 - from: "/lambda-visualiser/"
   to: "/lamviz/"
+- from: "/trains/stations"
+  to: "/trains/stations/A/"
 
 # blogposts
 
