Fix #34: broken email

--- a/src/data/people.yml
+++ b/src/data/people.yml
@@ -2,7 +2,7 @@ me:
   name: George Kaye
   address: Office 218, School of Computer Science, University Road W, B15 2TT
   email:
-    uni: g.j.kaye at pgr.bham.ac.uk
+    uni: g.j.kaye@pgr.bham.ac.uk
   picture: /images/me/me-3.webp
 noam:
   name: Noam Zeilberger
