--- a/src/data/visits.yml
+++ b/src/data/visits.yml
@@ -1,3 +1,7 @@
+- venue: 7th International Conference on Applied Category Theory (ACT 2024)
+  web: https://oxford24.github.io/
+  city: Oxford
+  dates: 17-21 June 2024
 - venue: Twelfth Symposium on Compositional Structures (SYCO 12)
   web: https://www.cl.cam.ac.uk/events/syco/12/
   city: Birmingham
