feat: move research to single page

--- a/src/data/links.yml
+++ b/src/data/links.yml
@@ -14,3 +14,6 @@ winterbourne: https://www.winterbourne.org.uk/
 
 # conferences
 act2021: https://www.cl.cam.ac.uk/events/act2021/
+
+# work
+acturis: https://www.acturis.com/
