--- a/src/data/people.yml
+++ b/src/data/people.yml
@@ -1,8 +1,7 @@
 me:
   name: George Kaye
   address: Office 218, School of Computer Science, University Road W, B15 2TT
-  email:
-    uni: g.j.kaye@pgr.bham.ac.uk
+  email: georgejkaye@gmail.com
   picture: /images/me/me-3.webp
 noam:
   name: Noam Zeilberger
